test/compile-errors/circular-import-a.crow
import
	.circular-import-b

a int()
	0
